			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04q: *********************************

BUG: (6/8/06, SMR) "Show ports on node" and other export highlighting
     crops text on the right side (Bug #1030).
FIX: In ExportChanges.showPortsAndExports(), draw text better.

BUG: (6/8/06, GVG) Waveform viewer does not display DC signals from EPIC output (Bug#1103)
FIX: Wrong boundary condition for end point events.

BUG: (6/8/06, GVG) exception when refining object selection in layout (Bug #1106)
FIX: detecting if currentChangeTypes array is null. Extra: typesafe enum added
and rotation information is shown.

BUG: (6/7/06, SMR) Initial splash window obscures everything (Bug #822).
FIX: Splash window no longer insists on being topmost.

BUG: (6/7/06, SMR) "Up hierarchy" always shows a full-screen view (Bug #1099)
FIX: In EditWindow.setCell(), only fill the screen if no context.

BUG: (6/7/06, SMR) Inserting a "T" in an arc triggers mimic deletion of the
     arc (Bug #1101).
FIX: In MimicStitch.mimicStitch(), mimic arc deletion only if no creations
     were done.

BUG: (6/6/06, SMR) Reloading waveform windows crashes (Bug #775).
FIX: Prevent null pointer problem in HSpice signal data.

BUG: (6/6/06, SMR) Waveform window makes uneven height panels, and may clip
     Y axis values (Bug #1095).
FIX: Panel height no longer taken from previous panels; Y axis values forced
     to be visible even if they cross to the right of the origin.

BUG: (6/6/06, SMR) Auto-stitching makes incorrect wires (Bug #1096).
FIX: New quad-tree code fixed to ensure valid connections.

BUG: (6/6/06, SMR) "Back" button crashes if cell has been deleted (Bug #1097).
FIX: In WindowFrame.setCellByHistory(), test for dead cells.

IMP/MAN: (6/6/06, SMR) Created new Preferences panel "Display / Display Control"
     to select and control the 3 display algorithms.  Removed items from the